{
  "version": 4,
  "terraform_version": "1.0.1",
  "serial": 225,
  "lineage": "239affd7-1b2f-c153-35ec-695b922c79bb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "ac-xl-alb-jburga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:509130302659:loadbalancer/app/ac-xl-alb-jburga/2a420e1c3a565891",
            "arn_suffix": "app/ac-xl-alb-jburga/2a420e1c3a565891",
            "dns_name": "ac-xl-alb-jburga-1082624338.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:509130302659:loadbalancer/app/ac-xl-alb-jburga/2a420e1c3a565891",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ac-xl-alb-jburga",
            "security_groups": [
              "sg-08ab126e8e8c44708"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0918e9b95f98fdc0a"
              },
              {
                "subnet_id": "subnet-0cd3f7a8eb15351e8"
              }
            ],
            "subnets": [
              "subnet-0918e9b95f98fdc0a",
              "subnet-0cd3f7a8eb15351e8"
            ],
            "tags": {
              "Name": "ac-xl-alb-jburga",
              "env": "ac-xl-terr-lab-1"
            },
            "tags_all": {
              "Name": "ac-xl-alb-jburga",
              "env": "ac-xl-terr-lab-1"
            },
            "vpc_id": "vpc-016fcfa48fb9dc393",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ac-xl-sg-alb-jburga",
            "aws_subnet.ac-xl-public-a-jburga",
            "aws_subnet.ac-xl-public-b-jburga",
            "aws_vpc.ac-xl-vpc-jburga"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ac-xl-eip-ngw-jburga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0bb0e0ab5be378888",
            "domain": "vpc",
            "id": "eipalloc-08188b6aa72467d63",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b8e901968db00144",
            "private_dns": "ip-10-0-81-138.ec2.internal",
            "private_ip": "10.0.81.138",
            "public_dns": "ec2-3-93-32-92.compute-1.amazonaws.com",
            "public_ip": "3.93.32.92",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_vpc.ac-xl-vpc-jburga",
            "aws_internet_gateway.ac-xl-igw-jburga"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ac-xl-ec2-apache-a-jburga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc2d3e4c0f9ebd18",
            "arn": "arn:aws:ec2:us-east-1:509130302659:instance/i-0d5baece1d51bc0fa",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d5baece1d51bc0fa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "camilo-rojas-lab",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0999a4f4881865e2f",
            "private_dns": "ip-10-0-83-110.ec2.internal",
            "private_ip": "10.0.83.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09832de50c2376ecf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-074889694358291bd",
            "tags": {
              "Name": "ac-xl-ec2-apache-a-jburga"
            },
            "tags_all": {
              "Name": "ac-xl-ec2-apache-a-jburga"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03729c051525bc1a2"
            ]
          },
          "dependencies": [
            "aws_security_group.ac-xl-sg-alb-jburga",
            "aws_security_group.ac-xl-sg-bastion-jburga",
            "aws_security_group.ac-xl-sg-ec2-jburga",
            "aws_subnet.ac-xl-private-a-jburga",
            "aws_vpc.ac-xl-vpc-jburga",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ac-xl-ec2-apache-b-jburga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc2d3e4c0f9ebd18",
            "arn": "arn:aws:ec2:us-east-1:509130302659:instance/i-0698ed9dc68c4f3ab",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0698ed9dc68c4f3ab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "camilo-rojas-lab",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0105b1d50d7593bc3",
            "private_dns": "ip-10-0-84-96.ec2.internal",
            "private_ip": "10.0.84.96",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-037aa10c5b8db2ec3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bee19bf28812cd3f",
            "tags": {
              "Name": "ac-xl-ec2-apache-b-jburga"
            },
            "tags_all": {
              "Name": "ac-xl-ec2-apache-b-jburga"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03729c051525bc1a2"
            ]
          },
          "dependencies": [
            "aws_security_group.ac-xl-sg-alb-jburga",
            "aws_security_group.ac-xl-sg-bastion-jburga",
            "aws_security_group.ac-xl-sg-ec2-jburga",
            "aws_subnet.ac-xl-private-b-jburga",
            "aws_vpc.ac-xl-vpc-jburga",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ac-xl-ec2-bastion-jburga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc2d3e4c0f9ebd18",
            "arn": "arn:aws:ec2:us-east-1:509130302659:instance/i-05774a2ee055c30e1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05774a2ee055c30e1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "camilo-rojas-lab",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00d0081843e68ce05",
            "private_dns": "ip-10-0-81-151.ec2.internal",
            "private_ip": "10.0.81.151",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b8d5d4d1305b482d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cd3f7a8eb15351e8",
            "tags": {
              "Name": "ac-xl-ec2-bastion-jburga"
            },
            "tags_all": {
              "Name": "ac-xl-ec2-bastion-jburga"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f0038a28b1ed6ca1"
            ]
          },
          "dependencies": [
            "aws_subnet.ac-xl-public-a-jburga",
            "aws_vpc.ac-xl-vpc-jburga",
            "data.http.myip",
            "aws_security_group.ac-xl-sg-bastion-jburga"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ac-xl-ec2-external-bastion-jburga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc2d3e4c0f9ebd18",
            "arn": "arn:aws:ec2:us-east-1:509130302659:instance/i-05e5d0a958b730f1c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05e5d0a958b730f1c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "camilo-rojas-lab",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0afd23bd5726704ce",
            "private_dns": "ip-20-0-1-166.ec2.internal",
            "private_ip": "20.0.1.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0812d2c9b01e4f17b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08ce48ebb1570003d",
            "tags": {
              "Name": "ac-xl-ec2-external-bastion-jburga",
              "env": "ac-xl-terr-lab-1"
            },
            "tags_all": {
              "Name": "ac-xl-ec2-external-bastion-jburga",
              "env": "ac-xl-terr-lab-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0deecae8c7dfc766f"
            ]
          },
          "dependencies": [
            "aws_security_group.ac-xl-sg-bastion-jburga2",
            "aws_subnet.ac-xl-public-a-jburga2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ac-xl-igw-jburga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:internet-gateway/igw-0e17bd9cd4970f4f8",
            "id": "igw-0e17bd9cd4970f4f8",
            "owner_id": "509130302659",
            "tags": {
              "Name": "ac-xl-igw-jburga",
              "env": "ac-xl-terr-lab-1"
            },
            "tags_all": {
              "Name": "ac-xl-igw-jburga",
              "env": "ac-xl-terr-lab-1"
            },
            "vpc_id": "vpc-016fcfa48fb9dc393"
          },
          "dependencies": [
            "aws_vpc.ac-xl-vpc-jburga"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ac-xl-igw-jburga2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:internet-gateway/igw-0f37156abc44d012f",
            "id": "igw-0f37156abc44d012f",
            "owner_id": "509130302659",
            "tags": {
              "Name": "ac-xl-igw-jburga2",
              "env": "ac-xl-terr-lab-1"
            },
            "tags_all": {
              "Name": "ac-xl-igw-jburga2",
              "env": "ac-xl-terr-lab-1"
            },
            "vpc_id": "vpc-06f3f7199c618e559"
          },
          "dependencies": [
            "aws_vpc.ac-xl-vpc-jburga2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:509130302659:listener/app/ac-xl-alb-jburga/2a420e1c3a565891/d920ece75bfed8f4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:509130302659:targetgroup/ac-xl-tg-jburga/6dd22df53623a5a8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:509130302659:listener/app/ac-xl-alb-jburga/2a420e1c3a565891/d920ece75bfed8f4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:509130302659:loadbalancer/app/ac-xl-alb-jburga/2a420e1c3a565891",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.ac-xl-public-a-jburga",
            "aws_subnet.ac-xl-public-b-jburga",
            "aws_vpc.ac-xl-vpc-jburga",
            "aws_alb.ac-xl-alb-jburga",
            "aws_lb_target_group.ac-xl-tg-jburga",
            "aws_security_group.ac-xl-sg-alb-jburga"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ac-xl-tg-jburga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:509130302659:targetgroup/ac-xl-tg-jburga/6dd22df53623a5a8",
            "arn_suffix": "targetgroup/ac-xl-tg-jburga/6dd22df53623a5a8",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:509130302659:targetgroup/ac-xl-tg-jburga/6dd22df53623a5a8",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ac-xl-tg-jburga",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ac-xl-tg-jburga",
              "env": "ac-xl-terr-lab-1"
            },
            "tags_all": {
              "Name": "ac-xl-tg-jburga",
              "env": "ac-xl-terr-lab-1"
            },
            "target_type": "instance",
            "vpc_id": "vpc-016fcfa48fb9dc393"
          },
          "dependencies": [
            "aws_vpc.ac-xl-vpc-jburga"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web1_tga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:509130302659:targetgroup/ac-xl-tg-jburga/6dd22df53623a5a8-20210723033857761800000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:509130302659:targetgroup/ac-xl-tg-jburga/6dd22df53623a5a8",
            "target_id": "i-0d5baece1d51bc0fa"
          },
          "dependencies": [
            "aws_lb_target_group.ac-xl-tg-jburga",
            "aws_security_group.ac-xl-sg-alb-jburga",
            "aws_security_group.ac-xl-sg-bastion-jburga",
            "aws_security_group.ac-xl-sg-ec2-jburga",
            "aws_subnet.ac-xl-private-a-jburga",
            "aws_vpc.ac-xl-vpc-jburga",
            "data.http.myip",
            "aws_instance.ac-xl-ec2-apache-a-jburga"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web2_tga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:509130302659:targetgroup/ac-xl-tg-jburga/6dd22df53623a5a8-20210723033859643200000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:509130302659:targetgroup/ac-xl-tg-jburga/6dd22df53623a5a8",
            "target_id": "i-0698ed9dc68c4f3ab"
          },
          "dependencies": [
            "aws_security_group.ac-xl-sg-ec2-jburga",
            "aws_subnet.ac-xl-private-b-jburga",
            "aws_vpc.ac-xl-vpc-jburga",
            "data.http.myip",
            "aws_instance.ac-xl-ec2-apache-b-jburga",
            "aws_lb_target_group.ac-xl-tg-jburga",
            "aws_security_group.ac-xl-sg-alb-jburga",
            "aws_security_group.ac-xl-sg-bastion-jburga"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ac-xl-ngw-jburga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08188b6aa72467d63",
            "connectivity_type": "public",
            "id": "nat-031601854013c271a",
            "network_interface_id": "eni-0b8e901968db00144",
            "private_ip": "10.0.81.138",
            "public_ip": "3.93.32.92",
            "subnet_id": "subnet-0cd3f7a8eb15351e8",
            "tags": {
              "Name": "ac-xl-ngw-jburga",
              "env": "ac-xl-terr-lab-1"
            },
            "tags_all": {
              "Name": "ac-xl-ngw-jburga",
              "env": "ac-xl-terr-lab-1"
            }
          },
          "dependencies": [
            "aws_eip.ac-xl-eip-ngw-jburga",
            "aws_internet_gateway.ac-xl-igw-jburga",
            "aws_subnet.ac-xl-public-a-jburga",
            "aws_vpc.ac-xl-vpc-jburga"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ac-xl-rt-private-jburga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:route-table/rtb-05ac8df2b5935f97c",
            "id": "rtb-05ac8df2b5935f97c",
            "owner_id": "509130302659",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-031601854013c271a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ac-xl-rt-private-jburga",
              "env": "ac-xl-terr-lab-1"
            },
            "tags_all": {
              "Name": "ac-xl-rt-private-jburga",
              "env": "ac-xl-terr-lab-1"
            },
            "vpc_id": "vpc-016fcfa48fb9dc393"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ac-xl-eip-ngw-jburga",
            "aws_internet_gateway.ac-xl-igw-jburga",
            "aws_nat_gateway.ac-xl-ngw-jburga",
            "aws_subnet.ac-xl-public-a-jburga",
            "aws_vpc.ac-xl-vpc-jburga"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ac-xl-rt-public-jburga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:route-table/rtb-031e1d2013f2fbaa0",
            "id": "rtb-031e1d2013f2fbaa0",
            "owner_id": "509130302659",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e17bd9cd4970f4f8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ac-xl-rt-public-jburga",
              "env": "ac-xl-terr-lab-1"
            },
            "tags_all": {
              "Name": "ac-xl-rt-public-jburga",
              "env": "ac-xl-terr-lab-1"
            },
            "vpc_id": "vpc-016fcfa48fb9dc393"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ac-xl-igw-jburga",
            "aws_vpc.ac-xl-vpc-jburga"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ac-xl-rt-public-jburga2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:route-table/rtb-0268a5d2bcabeecca",
            "id": "rtb-0268a5d2bcabeecca",
            "owner_id": "509130302659",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f37156abc44d012f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ac-xl-rt-public-jburga2",
              "env": "ac-xl-terr-lab-1"
            },
            "tags_all": {
              "Name": "ac-xl-rt-public-jburga2",
              "env": "ac-xl-terr-lab-1"
            },
            "vpc_id": "vpc-06f3f7199c618e559"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ac-xl-igw-jburga2",
            "aws_vpc.ac-xl-vpc-jburga2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-a-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021f03cc511431902",
            "route_table_id": "rtb-05ac8df2b5935f97c",
            "subnet_id": "subnet-074889694358291bd"
          },
          "dependencies": [
            "aws_internet_gateway.ac-xl-igw-jburga",
            "aws_nat_gateway.ac-xl-ngw-jburga",
            "aws_route_table.ac-xl-rt-private-jburga",
            "aws_subnet.ac-xl-private-a-jburga",
            "aws_subnet.ac-xl-public-a-jburga",
            "aws_vpc.ac-xl-vpc-jburga",
            "aws_eip.ac-xl-eip-ngw-jburga"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-b-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0dc781635e95689",
            "route_table_id": "rtb-05ac8df2b5935f97c",
            "subnet_id": "subnet-0bee19bf28812cd3f"
          },
          "dependencies": [
            "aws_eip.ac-xl-eip-ngw-jburga",
            "aws_internet_gateway.ac-xl-igw-jburga",
            "aws_nat_gateway.ac-xl-ngw-jburga",
            "aws_route_table.ac-xl-rt-private-jburga",
            "aws_subnet.ac-xl-private-b-jburga",
            "aws_subnet.ac-xl-public-a-jburga",
            "aws_vpc.ac-xl-vpc-jburga"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-a-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055a99afa0cb6cc8e",
            "route_table_id": "rtb-031e1d2013f2fbaa0",
            "subnet_id": "subnet-0cd3f7a8eb15351e8"
          },
          "dependencies": [
            "aws_vpc.ac-xl-vpc-jburga",
            "aws_internet_gateway.ac-xl-igw-jburga",
            "aws_route_table.ac-xl-rt-public-jburga",
            "aws_subnet.ac-xl-public-a-jburga"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-a-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c82c5a5708a7d822",
            "route_table_id": "rtb-0268a5d2bcabeecca",
            "subnet_id": "subnet-08ce48ebb1570003d"
          },
          "dependencies": [
            "aws_internet_gateway.ac-xl-igw-jburga2",
            "aws_route_table.ac-xl-rt-public-jburga2",
            "aws_subnet.ac-xl-public-a-jburga2",
            "aws_vpc.ac-xl-vpc-jburga2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-b-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0948a107bc3519bfe",
            "route_table_id": "rtb-031e1d2013f2fbaa0",
            "subnet_id": "subnet-0918e9b95f98fdc0a"
          },
          "dependencies": [
            "aws_route_table.ac-xl-rt-public-jburga",
            "aws_subnet.ac-xl-public-b-jburga",
            "aws_vpc.ac-xl-vpc-jburga",
            "aws_internet_gateway.ac-xl-igw-jburga"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ac-xl-sg-alb-jburga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:security-group/sg-08ab126e8e8c44708",
            "description": "security group alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ab126e8e8c44708",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ac-xl-sg-alb-jburga",
            "name_prefix": "",
            "owner_id": "509130302659",
            "revoke_rules_on_delete": false,
            "tags": {
              "env": "ac-xl-terr-lab-1",
              "owner": "terraform"
            },
            "tags_all": {
              "env": "ac-xl-terr-lab-1",
              "owner": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-016fcfa48fb9dc393"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ac-xl-vpc-jburga"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ac-xl-sg-bastion-jburga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:security-group/sg-0f0038a28b1ed6ca1",
            "description": "security group bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f0038a28b1ed6ca1",
            "ingress": [
              {
                "cidr_blocks": [
                  "190.43.228.115/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ac-xl-sg-bastion-jburga",
            "name_prefix": "",
            "owner_id": "509130302659",
            "revoke_rules_on_delete": false,
            "tags": {
              "env": "ac-xl-terr-lab-1",
              "owner": "terraform"
            },
            "tags_all": {
              "env": "ac-xl-terr-lab-1",
              "owner": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-016fcfa48fb9dc393"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.http.myip",
            "aws_vpc.ac-xl-vpc-jburga"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ac-xl-sg-bastion-jburga2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:security-group/sg-0deecae8c7dfc766f",
            "description": "security group bastion other VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0deecae8c7dfc766f",
            "ingress": [
              {
                "cidr_blocks": [
                  "190.43.228.115/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ac-xl-sg-bastion-jburga2",
            "name_prefix": "",
            "owner_id": "509130302659",
            "revoke_rules_on_delete": false,
            "tags": {
              "env": "ac-xl-terr-lab-1",
              "owner": "terraform"
            },
            "tags_all": {
              "env": "ac-xl-terr-lab-1",
              "owner": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f3f7199c618e559"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ac-xl-vpc-jburga2",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ac-xl-sg-ec2-jburga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:security-group/sg-03729c051525bc1a2",
            "description": "security group for private ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03729c051525bc1a2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f0038a28b1ed6ca1"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08ab126e8e8c44708",
                  "sg-0f0038a28b1ed6ca1"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ac-xl-sg-ec2-jburga",
            "name_prefix": "",
            "owner_id": "509130302659",
            "revoke_rules_on_delete": false,
            "tags": {
              "env": "ac-xl-terr-lab-1",
              "owner": "terraform"
            },
            "tags_all": {
              "env": "ac-xl-terr-lab-1",
              "owner": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-016fcfa48fb9dc393"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.http.myip",
            "aws_security_group.ac-xl-sg-alb-jburga",
            "aws_security_group.ac-xl-sg-bastion-jburga",
            "aws_vpc.ac-xl-vpc-jburga"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ac-xl-private-a-jburga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:subnet/subnet-074889694358291bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.83.0/24",
            "id": "subnet-074889694358291bd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509130302659",
            "tags": {
              "Name": "ac-xl-private-a-jburga",
              "env": "ac-xl-terr-lab-1"
            },
            "tags_all": {
              "Name": "ac-xl-private-a-jburga",
              "env": "ac-xl-terr-lab-1"
            },
            "vpc_id": "vpc-016fcfa48fb9dc393"
          },
          "dependencies": [
            "aws_vpc.ac-xl-vpc-jburga"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ac-xl-private-b-jburga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:subnet/subnet-0bee19bf28812cd3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.84.0/24",
            "id": "subnet-0bee19bf28812cd3f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509130302659",
            "tags": {
              "Name": "ac-xl-private-b-jburga",
              "env": "ac-xl-terr-lab-1"
            },
            "tags_all": {
              "Name": "ac-xl-private-b-jburga",
              "env": "ac-xl-terr-lab-1"
            },
            "vpc_id": "vpc-016fcfa48fb9dc393"
          },
          "dependencies": [
            "aws_vpc.ac-xl-vpc-jburga"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ac-xl-public-a-jburga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:subnet/subnet-0cd3f7a8eb15351e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.81.0/24",
            "id": "subnet-0cd3f7a8eb15351e8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "509130302659",
            "tags": {
              "Name": "ac-xl-public-jburga-1",
              "env": "ac-xl-terr-lab-1"
            },
            "tags_all": {
              "Name": "ac-xl-public-jburga-1",
              "env": "ac-xl-terr-lab-1"
            },
            "vpc_id": "vpc-016fcfa48fb9dc393"
          },
          "dependencies": [
            "aws_vpc.ac-xl-vpc-jburga"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ac-xl-public-a-jburga2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:subnet/subnet-08ce48ebb1570003d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "20.0.1.0/24",
            "id": "subnet-08ce48ebb1570003d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509130302659",
            "tags": {
              "Name": "ac-xl-public-a-jburga2",
              "env": "ac-xl-terr-lab-1"
            },
            "tags_all": {
              "Name": "ac-xl-public-a-jburga2",
              "env": "ac-xl-terr-lab-1"
            },
            "vpc_id": "vpc-06f3f7199c618e559"
          },
          "dependencies": [
            "aws_vpc.ac-xl-vpc-jburga2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ac-xl-public-b-jburga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:subnet/subnet-0918e9b95f98fdc0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.82.0/24",
            "id": "subnet-0918e9b95f98fdc0a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "509130302659",
            "tags": {
              "Name": "ac-xl-public-b-jburga",
              "env": "ac-xl-terr-lab-1"
            },
            "tags_all": {
              "Name": "ac-xl-public-b-jburga",
              "env": "ac-xl-terr-lab-1"
            },
            "vpc_id": "vpc-016fcfa48fb9dc393"
          },
          "dependencies": [
            "aws_vpc.ac-xl-vpc-jburga"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ac-xl-vpc-jburga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:vpc/vpc-016fcfa48fb9dc393",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00f59df78bbcfd350",
            "default_route_table_id": "rtb-002743b4fe8b4432d",
            "default_security_group_id": "sg-012a5946f6cbc3e83",
            "dhcp_options_id": "dopt-b99482db",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-016fcfa48fb9dc393",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-002743b4fe8b4432d",
            "owner_id": "509130302659",
            "tags": {
              "Name": "ac-xl-vpc-jburga",
              "env": "ac-xl-terr-lab-1"
            },
            "tags_all": {
              "Name": "ac-xl-vpc-jburga",
              "env": "ac-xl-terr-lab-1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ac-xl-vpc-jburga2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:vpc/vpc-06f3f7199c618e559",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.0.0.0/16",
            "default_network_acl_id": "acl-0f82b2d8bf93afe3a",
            "default_route_table_id": "rtb-000ac6e432b7cfc5a",
            "default_security_group_id": "sg-0053e92604a7e744b",
            "dhcp_options_id": "dopt-b99482db",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06f3f7199c618e559",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-000ac6e432b7cfc5a",
            "owner_id": "509130302659",
            "tags": {
              "Name": "ac-xl-vpc-jburga2",
              "env": "ac-xl-terr-lab-1"
            },
            "tags_all": {
              "Name": "ac-xl-vpc-jburga2",
              "env": "ac-xl-terr-lab-1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "ac-xl-vpc-peering-jburga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0a623372320846ebe",
            "peer_owner_id": "509130302659",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-016fcfa48fb9dc393",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "ac-xl-vpc-peering-jburga",
              "env": "ac-xl-terr-lab-1"
            },
            "tags_all": {
              "Name": "ac-xl-vpc-peering-jburga",
              "env": "ac-xl-terr-lab-1"
            },
            "vpc_id": "vpc-06f3f7199c618e559"
          },
          "dependencies": [
            "aws_vpc.ac-xl-vpc-jburga",
            "aws_vpc.ac-xl-vpc-jburga2"
          ]
        }
      ]
    }
  ]
}